--- a/css/userfreela.css
+++ b/css/userfreela.css
@@ -32,7 +32,7 @@ nav.menu-lateral {
     width: 60px;
     height: 100%;
     background-color: #00000029;
-    padding: 40px 5px;
+    padding: 10px 5px;
     box-shadow: 3px 0 15px #38c1a0;
     position: fixed;
     top: 0;
@@ -41,11 +41,17 @@ nav.menu-lateral {
     transition: .5s;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    z-index: 500;
+    z-index: 99999;
 }
 
 nav.menu-lateral.expandir{
     width: 300px;
+}
+
+.menu-lateral .logo-inicio img {
+    width: 105px;
+    height: auto;
+    margin-bottom: 10px;
 }
 
 .btn-expandir {
