--- a/css/style-Admin.css
+++ b/css/style-Admin.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -7,186 +7,49 @@ body{
     display: flex;
     min-height: 100vh;
     width: 100vw;
-  }
-  
-  .trilho {
-      width: 60px;
-      height: 30px;
-      background-color: #818181;
-      border-radius: 150px;
-      position: relative;
-      cursor: pointer;
-  }
-  
-  .trilho .indicador {
-      width: 30px;
-      height: 30px;
-      background-color: #000000;
-      border-radius: 50%;
-      transform: scale(.9);
-      position: absolute;
-      left: 0;
-      transition: .5s;
-  }
-  
-  .trilho.dark {
-      background-color: #a9a9a9;
-  }
-  
-  .trilho.dark .indicador {
-      left: 30px;
-      background-color: #fff;
-  }
-  
-  body.dark .txt-2,
-  body.dark .encontre,
-  body.dark .depoimentos,
-  body.dark .planos,
-  body.dark .ajuda {
-      background-color: #e1e1e1;
-  }
-  
-  body.dark .txt-3,
-  body.dark footer {
-      background-color: #2e71c6;
-  }
-  
-  body.dark header ul li a,
-  body.dark .topo-do-site ul li,
-  body.dark .txt-3 *,
-  body.dark footer *,
-  body.dark .footer-1 i {
-      color: #fff !important;
-  }
-  
-  body.dark h1,
-  body.dark i,
-  body.dark ul li a:hover {
-      color: #2e71c6 !important; 
-  }
-  
-  body.dark h3,
-  body.dark h4,
-  body.dark p,
-  body.dark ul li, 
-  body.dark a {
-      color: #000;
-  }
-  
-  body.dark span,
-  body.dark .planos h3,
-  body.dark .txt-topo-site i,
-  body.dark .p-planos i {
-      color: #38c1a0 !important;
-  }
-  
-  body.dark button {
-      border: 2px solid #2e71c6;
-      color: #2e71c6; 
-  }
-  
-  body.dark button:hover {
-      box-shadow: 0 0 15px #2e71c6, inset 0 0 15px #2e71c6;
-      text-shadow: 0 0 15px #2e71c6; 
-  }
-  
-  body.dark .btn-txt-2 button {
-      border: 2px solid #38c1a0;
-      color: #38c1a0;
-  }
-  
-  body.dark .btn-txt-2 button:hover {
-      box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
-      text-shadow: 0 0 15px #38c1a0;
-  }
-  
-  body.dark .p-planos,
-  body.dark .txt-box,
-  body.dark .depoimentos-box img {
-      box-shadow: 0 0 10px #2e71c6;
-      border: 2px solid #2e71c6;
-  }
-   
-  body.dark .txt-box:hover {
-      box-shadow: 0 0 30px #2e71c6;
-  }
-  
-  
-  /* ESTILO CABEÇALHO */
-  
-  header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 7;
-      width: 100%;
-      height: 50px;
-      padding: 10px 90px;
-      box-sizing: border-box;
-      background: rgba(0,0,0,0.6);
-  }
-  
-  header nav ul {
-      list-style-type: none;
-  }
-  
-  header ul li {
-      margin-left: 30px;
-      display: inline-block;
-  }
-  header ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 15px;
-      text-transform: uppercase;
-  }
-  
-  header nav.menu-desktop a:hover {
-      color: #38c1a0;
-  }
-  
-  .logo img {
-      width: 130px;
-      height: 65px;
-  
-  }
-  
-  .modo-escuro {
-      position: absolute;
-      top: 35%;
-      right: 8%;
-  }
-  
-  .acess {
-      position: absolute;
-      top: 11%;
-      right: 5%;
-      font-size: 9px;
-      text-transform: uppercase;
-      color: #fff;
-  }
-  
-  .maior-menor {
-      position: absolute;
-      top: 35%;
-      right: 2%;
-      font-size: 9px;
-  }
-  
-  .maior-menor button {
-      padding: 3px 3px;
-      margin-left: 4px;
-  }
-  
-  .container {
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100%;
+    height: 50px;
+    padding: 10px 90px;
+    box-sizing: border-box;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+header nav ul {
+    list-style-type: none;
+}
+
+header ul li {
+    margin-left: 30px;
+    display: inline-block;
+}
+
+header ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+
+.logo img {
+    width: 130px;
+    height: 65px;
+}
+
+.container {
     display: flex;
     width: 100%;
     height: 100%;
-  }
-  
-  nav.menu-lateral {
+}
+
+nav.menu-lateral {
     box-shadow: 3px 0 0 #7df9ff;
-    box-shadow: 0 5px 15px rgba(57, 78, 146, 0.852);
     width: 80px;
     height: 100vh;
     background-color: #0d0d1e;
@@ -196,40 +59,40 @@ body{
     overflow: hidden;
     transition: width 0.3s;
     z-index: 10;
-  }
-  
-  nav.menu-lateral:hover {
+}
+
+nav.menu-lateral:hover {
     width: 250px;
-  }
-  
-  .btn-expandir {
+}
+
+.btn-expandir {
     width: 90%;
     padding-left: 13px;
     padding-top: 10px;
-  }
-  
-  .btn-expandir > i {
+}
+
+.btn-expandir > i {
     font-size: 45px;
     cursor: pointer;
-  }
-  
-  ul {
+}
+
+ul {
     list-style-type: none;
     padding: 0;
     margin: 20px 0;
-  }
-  
-  ul li.itens-menu {
+}
+
+ul li.itens-menu {
     transition: 0.2s;
-  }
-  
-  ul li.itens-menu:hover {
+}
+
+ul li.itens-menu:hover {
     background-color: #4394cee6;
     border-radius: 5px;
     box-shadow: 0 5px 15px rgba(104, 38, 120, 0.752);
-  }
-  
-  ul li.itens-menu a {
+}
+
+ul li.itens-menu a {
     color: #fff;
     text-decoration: none;
     font-size: 20px;
@@ -238,169 +101,68 @@ body{
     align-items: center;
     margin-bottom: 20px;
     line-height: 50px;
-  }
-  
-  ul li.itens-menu a .txt-link {
-    margin-left: 40px;
-  }
-  
-  ul li.itens-menu a .icons > i {
-    font-size: 30px;
-    margin-left: 4px;
-  }
-  
-  .main-content {
+}
+
+.main-content {
     margin-left: 80px; /* Espaço para o menu lateral */
     flex-grow: 1;
     padding: 10px;
     transition: margin-left 0.3s;
-  }
-  
-  nav.menu-lateral:hover ~ .main-content {
-    margin-left: 250px; /* Expande o menu lateral quando está em hover */
-  }
-  
-  /* Dashboard - Caixas de informação */
-  .dashboard {
+}
+
+.dashboard {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
     gap: 15px;
     padding: 8px;
-    padding-top: 11px;
     margin: 1%;
-    width: calc(100% - 70px); /* Ajuste para não ultrapassar o menu */
+    width: calc(100% - 70px);
     transition: width 0.2s;
-  }
-  
-  nav.menu-lateral:hover ~ .dashboard {
-    width: calc(100% - 250px); /* até aonde vai o menu lateral */
-  }
-  
-  .panel {
+}
+
+.panel {
     background: #2c2c34;
     border-radius: 10px;
     padding: 50px;
     height: 350px;
     box-shadow: 0 5px 15px rgba(57, 78, 146, 0.852);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
-  
-  .panel:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 10px 30px rgba(59, 105, 203, 0.707);
-  }
-  
+}
 
-
-  .panel.large {
-    grid-column: 1 / 3;
-    grid-row: 1;
-    padding: 9%;
-    gap: 50px;
-    
-  }
-  
-  .panel.medium:nth-child(2) {
-    grid-column: 3 / 4;
-    grid-row: 2;
-  }
-  
-  .panel.medium:nth-child(3) {
-    grid-column: 1 / 1;
-    grid-row: 2;
-  }
-  
-  .panel.medium:nth-child(4) {
-    grid-column: 2 / 3;
-    grid-row: 2;
-  }
-  
-  .panel.small {
-    grid-column: 3 / 4;
-    grid-row: 1;
-  }
-  
-  .title {
+.title {
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10px;
     color: #00d1ff;
     text-transform: uppercase;
-  }
-  
-  .content {
+}
+
+.content {
     color: #c5c6c7;
-  }
-  
-  .stat {
-    font-size: 1.2em;
-    margin: 10px 0;
-  }
-  
-  canvas {
+}
+
+canvas {
     width: 100%;
     height: auto;
-  }
-  
-  /* Responsividade para telas menores */
-  @media (max-width: 1024px) {
+}
+
+/* Responsividade */
+@media (max-width: 1024px) {
     .dashboard {
-      grid-template-columns: 1fr 1fr;
-      width: calc(100% - 80px);
+        grid-template-columns: 1fr 1fr;
+        width: calc(100% - 80px);
     }
-  
-    nav.menu-lateral:hover ~ .dashboard {
-      width: calc(100% - 250px);
-    }
-  }
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
     nav.menu-lateral {
-      width: 60px;
+        width: 60px;
     }
-  
-    nav.menu-lateral:hover {
-      width: 200px;
-    }
-  
+
     .main-content {
-      margin-left: 60px;
+        margin-left: 60px;
     }
-  
-    nav.menu-lateral:hover ~ .main-content {
-      margin-left: 200px;
-    }
-  
+
     .dashboard {
-      grid-template-columns: 1fr;
-      width: 50%;
+        grid-template-columns: 1fr;
     }
-  
-    .panel {
-      min-height: 100px;
-    }
-  }
-  
-  @media (max-width: 1020px) {
-    .dashboard {
-      width: 100;
-      padding: 10px;
-      gap: 10px;
-    }
-  
-    .panel {
-      padding: 15px;
-    }
-  
-    .title {
-      font-size: 1.2em;
-    }
-  
-    .stat {
-      font-size: 1em;
-    }
-  }
-  
-  
+}
