--- a/css/userempresa.css
+++ b/css/userempresa.css
@@ -1,11 +1,47 @@
+/* ESTILO DA PÁGINA */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;   
+}
+
+body {
+    background-color: #000;
+    height: 100vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
+    transition: .5s
+}
+
+/* PADRÕES DA PÁGINA */
+
+button {
+    background-color: #38c1a0;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.lk{
+    width: 50px;
+    margin-right: -150px;
+
+}
+.gh{
+    width: 50px;
+
+}
 /* MENU LATERAL */
 
 nav.menu-lateral {
     width: 60px;
     height: 100%;
     background-color: #00000029;
-    padding: 40px 5px;
-    box-shadow: 3px 0 15px #d450e3;
+    padding: 10px 5px;
+    box-shadow: 3px 0 15px #38c1a0;
     position: fixed;
     top: 0;
     left: 0;
@@ -13,11 +49,17 @@ nav.menu-lateral {
     transition: .5s;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    z-index: 500;
+    z-index: 99999;
 }
 
 nav.menu-lateral.expandir{
     width: 300px;
+}
+
+.menu-lateral .logo-inicio img {
+    width: 105px;
+    height: auto;
+    margin-bottom: 10px;
 }
 
 .btn-expandir {
@@ -40,13 +82,13 @@ ul li.item-menu {
 }
 
 ul li.ativo {
-    background-color: #d450e3;
-    box-shadow: 0 0 15px #d450e3;
+    background-color: #38c1a0;
+    box-shadow: 0 0 15px #38c1a0;
 }
 
 ul li.item-menu:hover {
-    background-color: #e379efd0;
-    box-shadow: 0 0 15px #e379efd0;
+    background-color: #2e71c6;
+    box-shadow: 0 0 15px #2e71c6;
 }
 
 ul li.item-menu a {
@@ -71,43 +113,11 @@ nav.menu-lateral.expandir .txt-link {
 
 ul li.item-menu .icon > i {
     font-size: 30px;
-    margin-left: 30%
-}
-
-
-
-/* ESTILO DA PÁGINA */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;   
-}
-
-body {
-    background-color: #000;
-    height: 100vh;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 30%;
     color: #fff;
-    transition: .5s
 }
 
-h1 {
-    font-family: sans-serif;
-    color: #000000;
-    margin-bottom: 3px;
-} 
-
-h3 {
-    color: black;
-    margin-bottom: 3px;
-}
-
-span {
-    color: #000;
-    margin-bottom: 5px;
-}
-
+/* CARDS */
 
 section.cards {
     padding: 20px 4%;
@@ -116,36 +126,53 @@ section.cards {
     align-items: center;
 }
 
-.Card1 {
-    background-color: #ffffffaa;
+.card {
+    background-color: #c2c2c2;
     width: 760px;
-    height: 180px;
+    height: 210px;
     border-radius: 12px;
-    box-shadow: 4px 4px 12px #aaaa;
-    margin: 20px;
-    padding: 30px;
+    box-shadow: 0 5px 12px #38c1a0;
+    margin: 30px;
+    padding: 20px;
 }
 
-.Card1 button {
-    margin-top: 20px;
-    margin-left: 10px;
-    background-color: rgb(0, 224, 75);
-    height: 35px;
-    border: none;
-    padding: 4px;
-    width: 20%;
-    color: #fff;
-    border-radius: 4px;
+.card-box {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;    
 }
 
-.mensagem button{
-    background-color: #d450e3;
+.card .img-card img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
-.Card1 button:hover {
-    background-color: rgb(0, 252, 105);
-    cursor: pointer;
-    transform: scale(1.05);
+.card .btn-card {
+    display: flex;
+    justify-content: space-between;
 }
 
+.card .btn-mensagem button {
+    background-color: #2e71c6;
+}
 
+.card h1 {
+    font-size: 28px;
+    font-weight: 900;
+    margin-bottom: 0;
+    color: black;
+}
+
+.card h3 {
+    font-size: 21px;
+    margin-bottom: 5px;
+    color: black;
+}
+
+.card p {
+    font-size: 14px;
+    color: #000000;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
