--- a/css/userfreela.css
+++ b/css/userfreela.css
@@ -1,168 +1,325 @@
-/* ESTILO DA PÁGINA */
+<!DOCTYPE html>
+<html lang="pt-br">
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;   
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Freelancer</title>
+    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico" />
 
-body {
-    background-color: #000;
-    height: 100vh;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #fff;
-    transition: .5s
-}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-/* PADRÕES DA PÁGINA */
+    <link rel="stylesheet" type="text/css" href="css/userfreela.css">
 
-button {
-    background-color: #38c1a0;
-    border: none;
-    cursor: pointer;
-    color: #fff;
-    font-size: 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src=""></script>
 
-/* MENU LATERAL */
+</head>
 
-nav.menu-lateral {
-    width: 60px;
-    height: 100%;
-    background-color: #00000029;
-    padding: 10px 5px;
-    box-shadow: 3px 0 15px #38c1a0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    transition: .5s;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    z-index: 99999;
-}
+<body>
 
-nav.menu-lateral.expandir{
-    width: 300px;
-}
+    <header class="menu-principal">
 
-.menu-lateral .logo-inicio img {
-    width: 105px;
-    height: auto;
-    margin-bottom: 10px;
-}
+        <nav class="menu-lateral">
 
-.btn-expandir {
-    width: 100%;
-    padding-left: 10px;
-}
+            <div class="logo-inicio">
+                <a href="index.html">
+                    <img src="/img/logo.png">
+                </a>
+            </div>
 
-.btn-expandir > i {
-    font-size: 34px;
-    cursor: pointer;
-}
+            <div class="btn-expandir">
+                <i class="bi bi-list" id="btn-exp"></i>
+            </div><!--btn-expandir-->
+    
+            <ul>
+                <li class="item-menu ativo">
+                    <a href="index.html">
+                        <span class="icon"><i class="bi bi-house" title="Início"></i></span>
+                        <span class="txt-link">Início</span>
+                    </a>
+                </li>
+                
+                <li class="item-menu">
+                    <a href="sobre.html">
+                        <span class="icon"><i class="bi bi-file-person" title="Sobre"></i></span>
+                        <span class="txt-link">Sobre</span>
+                    </a>
+                </li>
+    
+                <li class="item-menu">
+                    <a href="minimundo.html">
+                        <span class="icon"><i class="bi bi-globe2" title="MiniMundo"></i></span>
+                        <span class="txt-link">MiniMundo</span>
+                    </a>
+                </li>
+    
+                <li class="item-menu">
+                    <a href="conceitual.html">
+                        <span class="icon"><i class="bi bi-diagram-3" title="Conceitual"></i></span>
+                        <span class="txt-link">Conceitual</span>
+                    </a>
+                </li>
+    
+                <li class="item-menu">
+                    <a href="logico.html">
+                        <span class="icon"><i class="bi bi-hdd-stack" title="Lógico"></i></span>
+                        <span class="txt-link">Lógico</span>
+                    </a>
+                </li>
+    
+                <li class="item-menu">
+                    <a href="fisico.html">
+                        <span class="icon"><i class="bi bi-hdd-network" title="Físico"></i></span>
+                        <span class="txt-link">Físico</span>
+                    </a>
+                </li>
+            </ul>
+        </nav><!--menu-lateral-->
+    
+        <script src="/js/userempresa.js"></script>
 
-ul{
-    height: 100%;
-    list-style-type: none;
-}
+    </header><!--fim-menu-principal-->
 
-ul li.item-menu {
-    transition: .2s;
-}
+    <main>
+        
+        <section class="cards">
 
-ul li.ativo {
-    background-color: #38c1a0;
-    box-shadow: 0 0 15px #38c1a0;
-}
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="img/17973908.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>TEC Room</h1>
+                        <h3>2 Vagas - Back end (Período - A Combinar)</h3>
+                        <p>Salário - A Combinar</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-ul li.item-menu:hover {
-    background-color: #2e71c6;
-    box-shadow: 0 0 15px #2e71c6;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                </div><!--btn-cards-->
+            </div><!--cards-->
 
-ul li.item-menu a {
-    text-decoration: none;
-    font-size: 18px;
-    padding: 20px 4%;
-    display: flex;
-    line-height: 40px;
-}
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/6106991.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>WebSize</h1>
+                        <h3>5 Vagas - Front-end (Período - 4 Meses)</h3>
+                        <p>Salário - A Combinar</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-ul li.item-menu a .txt-link {
-    color: #fff !important;
-    margin-left: 70px;
-    transition: 1s;
-    opacity: 0;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                </div><!--btn-cards-->
+            </div><!--cards-->
 
-nav.menu-lateral.expandir .txt-link {
-    margin-left: 40px;
-    opacity: 1;
-}
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="img/abstract-background-with-low-poly-design.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>HardPC</h1>
+                        <h3>2 Vagas - Full Stack (Período - Indeterminado)</h3>
+                        <p>Salário - R$7,500</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-ul li.item-menu .icon > i {
-    font-size: 30px;
-    margin-left: 30%;
-    color: #fff;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                </div><!--btn-cards-->
+            </div><!--cards-->
 
-/* CARDS */
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/man-touching-virtual-screen-futuristic-technology-digital-remix.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>GlobeTEC</h1>
+                        <h3>2 Vagas - Desenvolvedor Mobile (Período - 1 ano e 4 meses)</h3>
+                        <p>Salário - A Combinar</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-section.cards {
-    padding: 20px 4%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/medium-shot-man-wearing-vr-glasses (1).jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>DeVideo</h1>
+                        <h3>1 Vagas - Data Science(Período - indeterminado)</h3>
+                        <p>Salário - R$15,200</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-.card {
-    background-color: #80808021;
-    width: 760px;
-    height: 210px;
-    border-radius: 12px;
-    box-shadow: 0 5px 12px #38c1a0;
-    margin: 30px;
-    padding: 20px;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/standard-quality-control-concept-m.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>BookTEC</h1>
+                        <h3>2 Vagas - Estagio Programador Jr (Período - 6 Meses)</h3>
+                        <p>Salário - R$1,200</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-.card-box {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;    
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/person-working-html-computer.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>WebGames</h1>
+                        <h3>2 Vagas - Dev Game (Período - A Combinar)</h3>
+                        <p>Salário - A Combinar</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-.card .img-card img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/man-touching-virtual-screen-futuristic-technology-digital-remix.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>GlobeTEC</h1>
+                        <h3>2 Vagas - Back end (Período - A Combinar)</h3>
+                        <p>Salário - A Combinar</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-.card .btn-card {
-    display: flex;
-    justify-content: space-between;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/abstract-background-with-low-poly-design.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>HardPC</h1>
+                        <h3>3 Vagas - Front-end (Período - A Combinar)</h3>
+                        <p>Salário - R$2,500</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-.card .btn-mensagem button {
-    background-color: #2e71c6;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
+            <div class="card">
+                <div class="card-box">
+                    <div class="img-card">
+                        <img src="/img/17973908.jpg">
+                    </div><!--img-card-->
+    
+                    <div class="txt-card">
+                        <h1>TEC Room</h1>
+                        <h3>5 Vagas - Front-end (Período - A Combinar)</h3>
+                        <p>Salário - A Combinar</p>
+                    </div><!--txt-card-->
+                </div><!--card-box-->
 
-.card h1 {
-    font-size: 28px;
-    font-weight: 300;
-    margin-bottom: 10px;
-}
+                <div class="btn-card">
+                    <div class="btn-conectar">
+                        <button>Conectar</button>
+                    </div>
+                    <div class="btn-mensagem">
+                        <button>Mensagem</button>
+                    </div>
+                    
+                </div><!--btn-cards-->
+            </div><!--cards-->
 
-.card h3 {
-    font-size: 21px;
-    margin-bottom: 5px;
-}
+            
+        </section>
 
-.card p {
-    font-size: 14px;
-    color: #626262;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
+
+</body>
+
+</html>
