--- a/css/stylequemsomos.css
+++ b/css/stylequemsomos.css
@@ -1,9 +1,9 @@
 /* ESTILO DA PÁGINA */
 
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;   
+    box-sizing: border-box;
 }
 
 body {
@@ -46,7 +46,7 @@ button:hover {
 
 /* ACESSIBILIDADE */
 
-    /* BOTÃO DA ACESSIBILIDADE */
+/* BOTÃO DA ACESSIBILIDADE */
 
 .fixo {
     position: fixed;
@@ -95,14 +95,14 @@ button:hover {
     margin: 12px 0;
 }
 
-    /* AUMENTAR E DIMINUIR FONTE */
+/* AUMENTAR E DIMINUIR FONTE */
 
 .maior-menor button {
     padding: 3px 3px;
     margin-left: 4px;
 }
 
-    /* CLARO E ESCURO */
+/* CLARO E ESCURO */
 
 .trilho {
     width: 60px;
@@ -133,13 +133,6 @@ button:hover {
     background-color: #fff;
 }
 
-body.dark .txt-2,
-body.dark .encontre,
-body.dark .depoimentos,
-body.dark .planos,
-body.dark .ajuda {
-    background-color: #d5d4d4;
-}
 
 body.dark .txt-3,
 body.dark footer {
@@ -153,68 +146,31 @@ body.dark footer *,
 body.dark footer i,
 body.dark .fixo i,
 body.dark .menu-mobile .btn-login i {
-    color: #fff !important;
+    color: #000000 !important;
 }
 
 body.dark h1,
 body.dark i,
 body.dark i,
 body.dark ul li a:hover {
-    color: #2e71c6 !important; 
+    color: #2e71c6 !important;
 }
 
-body.dark h3,
-body.dark h4,
-body.dark p,
-body.dark ul li, 
-body.dark a {
-    color: #000;
-}
 
-body.dark span,
-body.dark .planos h3,
-body.dark .txt-topo-site i,
-body.dark .p-planos i {
-    color: #38c1a0 !important;
-}
 
 body.dark button {
     border: 2px solid #2e71c6;
-    color: #2e71c6; 
+    color: #2e71c6;
 }
 
-body.dark button:hover {
-    box-shadow: 0 0 15px #2e71c6, inset 0 0 15px #2e71c6;
-    text-shadow: 0 0 15px #2e71c6; 
-}
-
-body.dark .btn-txt-2 button {
-    border: 2px solid #38c1a0;
-    color: #38c1a0;
-}
-
-body.dark .btn-txt-2 button:hover {
-    box-shadow: 0 0 15px #38c1a0, inset 0 0 15px #38c1a0;
-    text-shadow: 0 0 15px #38c1a0;
-}
-
-body.dark .p-planos,
-body.dark .txt-box,
-body.dark .depoimentos-box img {
-    box-shadow: 0 0 10px #2e71c6;
-    border: 2px solid #2e71c6;
-}
- 
-body.dark .txt-box:hover {
-    box-shadow: 0 0 30px #2e71c6;
-}
 
 body.dark .menu-mobile nav ul li a:hover {
     background-color: #2e71c6;
 }
 
 
-body.dark .menu-desktop a:hover, .login-topo a:hover {
+body.dark .menu-desktop a:hover,
+.login-topo a:hover {
     box-shadow: -1px 2px 2px #2e71c6;
     color: #2e71c6;
 }
@@ -230,6 +186,7 @@ body.dark .menu-mobile .btn-login {
 body.dark .menu-mobile .btn-login:hover {
     box-shadow: 0 0 15px #2e71c6;
 }
+
 /* ESTILO CABEÇALHO */
 
 header {
@@ -241,8 +198,8 @@ header {
     height: 100px;
     padding: 10px 90px;
     box-sizing: border-box;
-    background: rgba(0,0,0,0.6);
-    z-index:1000;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1000;
 }
 
 header nav.menu-desktop ul {
@@ -262,7 +219,8 @@ header nav.menu-desktop ul li a {
     padding: 15px;
 }
 
-.menu-desktop a:hover, .login-topo a:hover {
+.menu-desktop a:hover,
+.login-topo a:hover {
     box-shadow: -1px 2px 2px #38c1a0;
     color: #38c1a0;
 }
@@ -327,7 +285,9 @@ header nav.menu-desktop ul li a {
     position: absolute;
 }
 
-.legenda:after, .legenda2:after, .legenda3:after {
+.legenda:after,
+.legenda2:after,
+.legenda3:after {
     content: "";
     position: absolute;
     width: 100%;
@@ -361,10 +321,10 @@ header nav.menu-desktop ul li a {
 
 h1 {
     font-family: sans-serif;
-    color: #1af5c2;
+    color: #ffffff;
     margin-top: 20px;
     margin-left: 10px;
-} 
+}
 
 /* POSIÇÃO DO MENU */
 
@@ -399,18 +359,18 @@ h1 {
 .topo-do-site video {
     top: 0;
     left: 0;
-    width: 
+    opacity: 0.3;
 }
 
 /* ESTILO FOOTER */
 
 footer {
-    position:static;
-    margin: -3.8px;
     padding: 40px 4%;
     background-color: #38c1a0;
-    width: 1924px;
+    width: 1920px;
+    margin-top: -5px;
 }
+
 footer .flex {
     justify-content: space-between;
 }
@@ -463,7 +423,7 @@ footer .flex {
     width: 70%;
 }
 
-.menu-mobile.abrir-menu ~ .overlay-menu{
+.menu-mobile.abrir-menu~.overlay-menu {
     display: block;
 }
 
@@ -522,50 +482,88 @@ footer .flex {
     display: none;
 }
 
-/* RESPONSIVIDADE */
+/*Responsividade*/
 
-@media screen and (max-width: 1020px){
+@media screen and (max-width: 768px) {
+
+    /* CABECALHO */
+
     /* CLASSES GERAIS */
-    .flex{
+    .flex {
         flex-direction: column;
     }
 
+    .topo-do-site .flex {
+        flex-direction: column-reverse;
+    }
+
+    .legendas {
+        flex-direction: column-reverse;
+    }
+
+    h1 {
+        font-size: 11px;
+    }
+
+    .legenda {
+        top: 120px;
+        height: 205px;
+    }
+
+    .legenda2 {
+        top: 338px;
+        height: 205px;
+    }
+
+    .legenda3 {
+        top: 555px;
+        height: 205px;
+    }
+
+    .legenda,
+    .legenda2,
+    .legenda3 {
+        margin-left: -280px;
+    }
+
     /* MENU */
-    .menu-desktop, .btn-topo {
+    .menu-desktop,
+    .btn-topo {
         display: none;
-    }    
+    }
 
     .btn-abrir-menu {
         display: block;
     }
 
-    h1 {
-        font-size: 45px;
-    }
-
-    /* TOPO DO SITE */
-
-    section.topo-do-site{
-    padding: 60px 6%;
-    }
-
-    .txt-topo-site {
-        padding-right: 20px;
-    }
-    
-    .topo-do-site h1 {
-        text-align: center;
-        font-size: 30px;
-        line-height: 30px;
-    }
-
     /* FOOTER */
 
     footer {
-        padding: 40px 8%;
+        padding: 40px 4%;
+        width: 390px;
+        margin-top: -5px;
+    }
+
+    footer .flex {
+        flex-direction: column;
+    }
+
+    .footer-1 {
+        margin-left: 118px;
+        margin-bottom: 10px;
     }
 
     .footer-2 {
-        margin-top: 15px;
+        text-align: center;
     }
+
+    .footer-2 i {
+        font-size: 15px;
+        color: #fff;
+    }
+
+    .footer-2 a {
+        text-decoration: none;
+    }
+
 }
