--- a/css/acessibilidade.css
+++ b/css/acessibilidade.css
@@ -1,3 +1,245 @@
+/* MENU DESKTOP */
+
+/* ESTILO CABEÇALHO */
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100%;
+    height: 100px;
+    padding: 10px 90px;
+    box-sizing: border-box;
+    background: rgba(0,0,0,0.6);
+}
+
+header nav.menu-desktop ul {
+    list-style-type: none;
+}
+
+header nav.menu-desktop ul li {
+    margin-left: 25px;
+    display: inline-block;
+}
+
+header nav.menu-desktop ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    text-transform: uppercase;
+    padding: 15px;
+}
+
+.menu-desktop a:hover, .login-topo a:hover {
+    box-shadow: -1px 2px 2px #38c1a0;
+    color: #38c1a0;
+}
+
+.dropdown-menu {
+    position: absolute;
+    display: none;
+    min-width: 150px;
+}
+
+.dropdown-menu a {
+    display: block;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    box-shadow: 1px 2px 2px #38c1a0;
+    background-color: #000000a9;
+    margin-bottom: 20px;
+    margin-top: 15px;
+}
+
+.dropdown i {
+    font-size: 20px;
+    margin: 0 0 0 2px;
+}
+
+.btn-topo .login-btn {
+    margin-top: 10px;
+    text-decoration: none;
+    font-size: 14px;
+    color: #fff!important;
+}
+
+.btn-topo .login-btn:hover {
+    text-decoration: underline 2px #38c1a0;
+}
+
+.btn-topo .btn-logout {
+    margin-top: 10px;
+    text-decoration: none;
+    font-size: 14px;
+    color: #656565;
+}
+
+.btn-topo .btn-logout:hover { 
+    color: #b90000;
+}
+
+.btn-topo button {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: uppercase;
+    background: transparent;
+    border: 2px solid #38c1a0;
+    color: #38c1a0;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+/* POSIÇÃO DO MENU */
+
+.logo img {
+    width: 120px;
+    height: 60px;
+    position: absolute;
+    top: 18%;
+    left: 4%;
+}
+
+.menu-desktop {
+    position: absolute;
+    float: left;
+    top: 40%;
+    left: 15%;
+}
+
+.login-topo {
+    position: absolute;
+    left: 140%;
+}
+
+.btn-topo {
+    display: flex;
+    gap: 15px;
+    position: absolute;
+    top: 30%;
+    right: 2%;
+}
+
+/* ESTILO FOOTER */
+
+footer {
+    padding: 40px 4%;
+    background-color: #38c1a0;
+}
+
+footer .flex {
+    justify-content: space-between;
+}
+
+.footer-1 i {
+    color: #fff;
+    font-size: 25px;
+    margin-left: 10px;
+}
+
+.footer-2 {
+    text-align: center;
+}
+
+.footer-2 i {
+    font-size: 15px;
+    color: #fff;
+}
+
+.footer-2 a {
+    text-decoration: none;
+}
+
+
+/* ESTILO MENU MOBILE */
+
+.btn-abrir-menu {
+    display: none;
+}
+
+.btn-abrir-menu i {
+    position: fixed;
+    top: 4%;
+    right: 5%;
+}
+
+.menu-mobile {
+    background-color: #000000cb;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .2s;
+}
+
+.menu-mobile.abrir-menu {
+    width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+    display: block;
+}
+
+.menu-mobile .btn-fechar {
+    padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i {
+    color: #38c1a0;
+    font-size: 30px;
+}
+
+.menu-mobile nav ul {
+    text-align: right;
+}
+
+.menu-mobile nav ul li a {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    padding: 20px 8%;
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.menu-mobile nav ul li a:hover {
+    background-color: #38c1a0;
+    color: #000 !important;
+}
+
+.menu-mobile .btn-login {
+    background-color: #38c1a0;
+    font-size: 15px;
+    text-decoration: underline;
+    text-align: left;
+}
+
+.menu-mobile .btn-login i {
+    color: #fff;
+    margin-right: 20px;
+}
+
+.menu-mobile .btn-login:hover {
+    box-shadow: 0 0 15px #38c1a0;
+}
+
+.overlay-menu {
+    background-color: #000000a9;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 88888;
+    display: none;
+}
+
 /* ACESSIBILIDADE */
 
     /* BOTÃO DA ACESSIBILIDADE */
