--- a/css/planos.css
+++ b/css/planos.css
@@ -44,6 +44,55 @@ main {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
 }
 
+body {
+    font-family: 'Roboto', Arial, sans-serif; 
+    margin: 0;
+    padding: 0;
+    background: #000; 
+    color: #e0e0e0;
+}
+
+main {
+    padding: 50px 20px;
+    text-align: center;
+    margin: 60px;
+}
+h1 {
+    margin-bottom: 40px; 
+}
+.planos-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.planos {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.plano {
+    background-color: #80808021;
+    padding: 30px;
+    border-radius: 12px;
+    text-align: center;
+    width: 320px;
+    color: #e0e0e0;
+    border: 3px solid rgba(255, 255, 255, 0.1);
+    transition: all 0.4s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.plano:hover {
+    border-color: rgb(0, 184, 148);
+    transform: translateY(-10px); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
+}
+
 .plano-icon {
     font-size: 50px;
     color: #38c1a0;
@@ -92,7 +141,7 @@ main {
 }
 
 @media (max-width: 768px) {
-    .planos {
-        flex-direction: column; 
+    .planos-container {
+        flex-direction: column;
     }
 }
