--- a/css/userfreela.css
+++ b/css/userfreela.css
@@ -79,7 +79,7 @@ ul li.ativo {
 }
 
 ul li.item-menu:hover {
-    background-color: #2e71c6;
+    background-color: #38c1a0;
     box-shadow: 0 0 15px #2e71c6;
 }
 
