--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -58,8 +58,7 @@ body {
 
 .label-float label {
     position: absolute;
-    top: 50%;
-    left: 10px;
+    top: 50%;    left: 10px;
     transform: translateY(-50%);
     background-color: #1a1a2e;
     padding: 0 5px;
@@ -85,4 +84,13 @@ i.fa-eye {
     transform: translateY(-50%);
     cursor: pointer;
     color: #aaa;
+}
+
+.enter{
+    margin-top: 10px;
+    padding: 10px 20px;
+}
+.enter button{
+    padding: 10px 20px;
+    border-radius: 500px;
 }
