--- a/css/acessibilidade.css
+++ b/css/acessibilidade.css
@@ -11,7 +11,7 @@ header {
     height: 100px;
     padding: 10px 90px;
     box-sizing: border-box;
-    background: rgba(0,0,0,0.6);
+    //*background: rgba(0,0,0,0.6);**/
 }
 
 header nav.menu-desktop ul {
