--- a/css/userempresa.css
+++ b/css/userempresa.css
@@ -14,28 +14,12 @@ body {
     transition: .5s
 }
 
-/* PADRÕES DA PÁGINA */
-
-button {
-    background-color: #38c1a0;
-    border: none;
-    cursor: pointer;
-    color: #fff;
-    font-size: 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-.txt-card i{
-    font-size: 30px;
-    color: black;
-}
-
 /* MENU LATERAL */
 
 nav.menu-lateral {
     width: 60px;
     height: 100%;
-    background-color: #00000029;
+    background-color: #000000eb;
     padding: 10px 5px;
     box-shadow: 3px 0 15px #38c1a0;
     position: fixed;
@@ -52,7 +36,7 @@ nav.menu-lateral.expandir{
     width: 300px;
 }
 
-.menu-lateral .logo-inicio img {
+.menu-lateral .logo-ue img {
     width: 105px;
     height: auto;
     margin-bottom: 10px;
@@ -66,6 +50,7 @@ nav.menu-lateral.expandir{
 .btn-expandir > i {
     font-size: 34px;
     cursor: pointer;
+    color: #fff;
 }
 
 ul{
@@ -84,7 +69,7 @@ ul li.ativo {
 
 ul li.item-menu:hover {
     background-color: #38c1a0;
-    box-shadow: 0 0 15px #2e71c6;
+    box-shadow: 0 0 15px #38c1a0;
 }
 
 ul li.item-menu a {
@@ -123,13 +108,14 @@ section.cards {
 }
 
 .card {
-    background-color: #c2c2c2;
+    background-color: #d9d9d9;
     width: 760px;
-    height: 230px;
+    height: auto;
     border-radius: 12px;
     box-shadow: 0 5px 12px #38c1a0;
     margin: 30px;
     padding: 20px;
+    color: #000;
 }
 
 .card-box {
@@ -153,22 +139,34 @@ section.cards {
     background-color: #2e71c6;
 }
 
+.btn-card button {
+    background-color: #38c1a0;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
 .card h1 {
     font-size: 28px;
     font-weight: 900;
     margin-bottom: 0;
-    color: black;
 }
 
 .card h3 {
     font-size: 21px;
     margin-bottom: 5px;
-    color: black;
 }
 
 .card p {
     font-size: 14px;
-    color: #000000;
     text-transform: uppercase;
     margin-bottom: 10px;
+}
+
+.card i {
+    margin-left: 10px;
+    font-size: 25px;
 }
